# cnrsd

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: plot_station.py  read_files.py
src/cnrsd/: __init__.py
