[project]
name = "cnrsd"
version = "0.1.0"
description = "解析中国 BUFR 格式的雨滴谱数据"
readme = "README.md"
authors = [
    { name = "ZhaJiMan", email = "915023793@qq.com" }
]
requires-python = ">=3.10"
dependencies = [
    "bitarray>=3.8.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3,<3.0.0",
    "xarray>=2025.6.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ruff>=0.14.14",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "RUF022"]
ignore = ["F403", "E731"]

[tool.basedpyright]
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportUnnecessaryTypeIgnoreComment = true
