[project]
name = "cnrsd"
version = "0.1.0"
description = "解析中国 BUFR 格式的雨滴谱数据"
authors = [{ name = "ZhaJiMan", email = "915023793@qq.com" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["BUFR", "atmospheric science"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "bitarray>=3.0.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
all = [
    "xarray>=2024.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "line-profiler>=5.0.0",
    "matplotlib>=3.10.8",
    "ruff>=0.14.14",
    "typos>=1.43.4",
]

[project.urls]
Homepage = "https://github.com/ZhaJiMan/cnrsd"
Issues = "https://github.com/ZhaJiMan/cnrsd/issues"
Changelog = "https://github.com/ZhaJiMan/cnrsd/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "RUF022"]
ignore = ["F403", "E731"]

[tool.typos.default.extend-identifiers]
ba2int = "ba2int"

[tool.basedpyright]
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportUnnecessaryTypeIgnoreComment = true
